# marana

./: .flake8  .gitignore  .travis.yml  2  Makefile  README.md  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: marana_ci.yml
examples/: basoon.ly  basoon.py  bassoon.py  example.py  score.ly
marana/: Makefile  __init__.py  __metadata__.py  fusion.py  main.py  metadata.json  parser.py  pitch.py  rhythm.py
marana/builds/: parts.ily  segments.ily
marana/etc/: roughWork.py  testPitchDict.py  testTimeSignatures.py  workflow.org  workflow.tex
marana/materials/: __init__.py
marana/segments/: buildSegments.sh  createSegments.sh  genDef.py  genSegmentTemplates.sh
marana/stylesheets/: contexts.ily  mccartney.ily  stylesheet.ily
marana/test/: test_materials.py  test_segments.py
marana/tools/: FuzzyHarmony.py  MarkupLibrary.py  PhraseMaker.py  ScoreTemplate.py  SegmentMaker.py  __init__.py  accents.py  barlines.py  clef.py  grace.py  illustration.ly  line_break.py  material_methods.py  music_generators.py  notehead_overrides.py  ottava.py  set_build_path.py  tie.py  time_signature.py  tremolo.py
material/: parser.py  pitch.py
modules/: .coverage  test_parser.py  test_pitch.py
morch/: Makefile  dist.org  todo.org
morch/instruments/: bassoon.py  hrn3.py  pitchdata.py
morch/parts/: bassoon.ly  basstrombone.ly  cello.ly  clarinet1.ly  clarinet2.ly  contrabass.ly  flute1.ly  flute2.ly  harp.ly  horn1-2.ly  horn1.ly  horn2.ly  horn3-4.ly  horn3.ly  horn4.ly  oboe1.ly  oboe2.ly  percussion.ly  segments.ily  timpani.ly  trombone1-2.ly  trombone1.ly  trumpet1.ly  trumpet2.ly  tuba.ly  vibraphone.ly  viola.ly  violin1.ly  violin2.ly
test/: test_parser.py  test_pitch.py
tests/: test_attachments.py  test_fusion.py  test_isorhythm.py  test_parser.py  test_pitch.py  test_rhythm.py  test_tools.py
(+85 files in other folders)
