[metadata]
name = marana
version = 0.0.1
author = Adam McCartney
licence = APACHE 2.0
description = Some personalized composing tools that leverage abjad to produce lilypond
description-file = README.md
author_email = adam@mur.at
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Python Module
    Intended Audience :: Developers
    License :: Apache
    Oerating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Math Functions
    Topic :: Software Development :: Libraries :: Python Modules


[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.10
setup_requires =
    setuptools >= 40.6.0
install_requires =
    abjad==3.6
    abjad-ext-rmakers==3.6

[options.packages.find]
where = src
